Post type filtering

--- a/options/options.html
+++ b/options/options.html
@@ -65,6 +65,23 @@
         </label>
     </div>
 
+    <div class="option-title">Post types to display</div>
+
+    <div class="option indented-option">
+        <input type="checkbox" id="display-images" name="display-images" checked disabled/>
+        <label for="display-images">Images</label>
+    </div>
+
+    <div class="option indented-option">
+        <input type="checkbox" id="display-gifs" name="display-gifs" />
+        <label for="display-gifs">GIFs</label>
+    </div>
+
+    <div class="option indented-option">
+        <input type="checkbox" id="display-videos" name="display-videos" />
+        <label for="display-videos">Videos</label>
+    </div>
+
     <div id="status"></div>
 
     <button id="save">Save</button>
