Refactoring options and other fixes

--- a/options/options.html
+++ b/options/options.html
@@ -16,22 +16,22 @@
     </div>
 
     <div class="option">
-        <input type="checkbox" id="hide-ads" name="hide-ads" />
+        <input type="checkbox" id="isHideAds" name="hide-ads" />
         <label for="hide-ads">Hide ads</label>
     </div>
 
     <div class="option indented-option">
-        <input type="checkbox" id="simplify-layout" name="simplify-layout" />
+        <input type="checkbox" id="isSimplifyLayout" name="simplify-layout" />
         <label for="simplify-layout">Simplify layout</label>
     </div>
 
     <div class="option">
-        <input type="checkbox" id="hot-limit" name="hot-limit" />
+        <input type="checkbox" id="isHotLimit" name="hot-limit" />
         <label for="hot-limit-option">
             Limit <b>hot</b> page to posts with
             <input
                 type="number"
-                id="hot-limit-value"
+                id="hotLimitValue"
                 class="number-input"
                 name="hot-limit-value"
                 max="10000"
@@ -43,7 +43,7 @@
     <div class="option">
         <input
             type="checkbox"
-            id="trending-limit"
+            id="isTrendingLimit"
             name="trending-limit"
             checked="true"
         />
@@ -51,7 +51,7 @@
             Limit <b>trending</b> page to posts with
             <input
                 type="number"
-                id="trending-limit-value"
+                id="trendingLimitValue"
                 class="number-input"
                 name="trending-limit-value"
                 max="5000"
@@ -68,12 +68,12 @@
     </div>
 
     <div class="option indented-option">
-        <input type="checkbox" id="display-gifs" name="display-gifs" />
+        <input type="checkbox" id="isShowGifs" name="display-gifs" />
         <label for="display-gifs">GIFs</label>
     </div>
 
     <div class="option indented-option">
-        <input type="checkbox" id="display-videos" name="display-videos" />
+        <input type="checkbox" id="isShowVideos" name="display-videos" />
         <label for="display-videos">Videos</label>
     </div>
 
