Options panel dynamic style

--- a/options/options.html
+++ b/options/options.html
@@ -10,8 +10,8 @@
     <div class="select-option">
         <label for="theme" class="option-label">Theme:</label>
         <select name="theme" id="theme">
-            <option value="dark">Dark</option>
-            <option value="light">Light</option>
+            <option value="default">Default</option>
+            <option value="dark" selected>Dark</option>
         </select>
     </div>
 
@@ -82,7 +82,7 @@
     <button id="save">Save</button>
     <button id="restore">Restore defaults</button>
 
-    <script src="defaults.js"></script>
+    <script src="../globals.js"></script>
     <script src="options.js"></script>
 </body>
 
