--- a/options/options.html
+++ b/options/options.html
@@ -63,7 +63,7 @@
     <div class="option-title">Post types to display</div>
 
     <div class="option indented-option">
-        <input type="checkbox" id="display-images" name="display-images" checked disabled/>
+        <input type="checkbox" id="isShowImages" name="display-images" />
         <label for="display-images">Images</label>
     </div>
 
@@ -83,6 +83,7 @@
     <button id="restore">Restore defaults</button>
 
     <script src="../globals.js"></script>
+    <script src="defaults.js"></script>
     <script src="options.js"></script>
 </body>
 
