Number option validation

--- a/options/options.html
+++ b/options/options.html
@@ -60,7 +60,7 @@
         </label>
     </div>
 
-    <div class="option-title">Post types to display</div>
+    <div class="option-title">Post types to display (at least one):</div>
 
     <div class="option indented-option">
         <input type="checkbox" id="isShowImages" name="display-images" />
