Improved options popup

--- a/options/options.html
+++ b/options/options.html
@@ -6,85 +6,74 @@
     <link rel="stylesheet" type="text/CSS" href="options.css">
 </head>
 
-<body>        
-    <div class="select-option">
-        <label for="theme" class="option-label">Theme:</label>
-        <select name="theme" id="theme">
-            <option value="default">Default</option>
-            <option value="dark" selected>Dark</option>
-        </select>
-    </div>
+<body>
+    <div id="options">
+        <h3 class='title'>Personalization</h3>
 
-    <div class="option">
-        <input type="checkbox" id="isHideAds" name="hide-ads" />
-        <label for="hide-ads">Hide ads</label>
-    </div>
+        <div class="option text">
+            <label for="theme" class="option-label">Theme:</label>
+            <select name="theme" id="theme">
+                <option value="default">Default</option>
+                <option value="dark" selected>Dark</option>
+            </select>
+        </div>
 
-    <div class="option indented-option">
-        <input type="checkbox" id="isSimplifyLayout" name="simplify-layout" />
-        <label for="simplify-layout">Simplify layout</label>
-    </div>
+        <div class="option">
+            <input type="checkbox" id="isHideAds" />
+            <label for="isHideAds">
+                Hide ads and
+                <input type="checkbox" id="isSimplifyLayout" class="option inline" />
+                <label for="isSimplifyLayout">simplify layout</label>
+            </label>
+        </div>
 
-    <div class="option">
-        <input type="checkbox" id="isHotLimit" name="hot-limit" />
-        <label for="hot-limit-option">
-            Limit <b>hot</b> page to posts with
-            <input
-                type="number"
-                id="hotLimitValue"
-                class="number-input"
-                name="hot-limit-value"
-                max="10000"
-            />
-            points.
-        </label>
-    </div>
+        <h3 class='title'>Posts</h3>
+    
+        <div class="option">
+            <input type="checkbox" id="isHotLimit" />
+            <label for="isHotLimit">
+                Limit <b>hot</b> page to posts with
+                <input type="number" id="hotLimitValue" class="number-input" max="10000" />
+                points.
+            </label>
+        </div>
+    
+        <div class="option">
+            <input type="checkbox" id="isTrendingLimit" />
+            <label for="isTrendingLimit">
+                Limit <b>trending</b> page to posts with
+                <input type="number" id="trendingLimitValue" class="number-input" max="5000" />
+                points.
+            </label>
+        </div>
 
-    <div class="option">
-        <input
-            type="checkbox"
-            id="isTrendingLimit"
-            name="trending-limit"
-            checked="true"
-        />
-        <label for="trending-limit">
-            Limit <b>trending</b> page to posts with
-            <input
-                type="number"
-                id="trendingLimitValue"
-                class="number-input"
-                name="trending-limit-value"
-                max="5000"
-            />
-            points.
-        </label>
-    </div>
+        <h3 class="title">Post types to display (at least one)</h3>
 
-    <div class="option-title">Post types to display (at least one):</div>
+        <div class="option">
+            <input type="checkbox" id="isShowImages" />
+            <label for="isShowImages">Images</label>
+        </div>
 
-    <div class="option indented-option">
-        <input type="checkbox" id="isShowImages" name="display-images" />
-        <label for="display-images">Images</label>
-    </div>
+        <div class="option">
+            <input type="checkbox" id="isShowGifs" />
+            <label for="isShowGifs">GIFs</label>
+        </div>
 
-    <div class="option indented-option">
-        <input type="checkbox" id="isShowGifs" name="display-gifs" />
-        <label for="display-gifs">GIFs</label>
-    </div>
-
-    <div class="option indented-option">
-        <input type="checkbox" id="isShowVideos" name="display-videos" />
-        <label for="display-videos">Videos</label>
+        <div class="option">
+            <input type="checkbox" id="isShowVideos"/>
+            <label for="isShowVideos">Videos</label>
+        </div>
     </div>
 
     <div id="status"></div>
 
-    <button id="save">Save</button>
-    <button id="restore">Restore defaults</button>
+    <div class="form-actions">
+        <button id="save">Save</button>
+        <button id="restore">Restore defaults</button>
+    <div>
 
     <script src="../globals.js"></script>
-    <script src="defaults.js"></script>
-    <script src="options.js"></script>
+    <script type="module" src="options.js"></script>
 </body>
 
 </html>
