Add option to hide standalone videos

--- a/options/options.html
+++ b/options/options.html
@@ -27,6 +27,11 @@
             </label>
         </div>
 
+        <div class="option">
+            <input type="checkbox" id="isHideStandaloneVideos" />
+            <label for="isHideStandaloneVideos">Hide standalone videos</label>
+        </div>
+
         <h3 class='title'>Posts</h3>
     
         <div class="option">
