--- a/options/options.html
+++ b/options/options.html
@@ -32,6 +32,7 @@
             <label for="isHideStandaloneVideos">Hide standalone videos</label>
         </div>
 
+
         <h3 class='title'>Posts</h3>
     
         <div class="option">
@@ -52,6 +53,7 @@
             </label>
         </div>
 
+
         <h3 class="title">Post types to display (at least one)</h3>
 
         <div class="option">
@@ -67,6 +69,26 @@
         <div class="option">
             <input type="checkbox" id="isShowVideos"/>
             <label for="isShowVideos">Videos</label>
+        </div>
+
+
+        <h3 class="title">Download format</h3>
+
+        <div class="option text">
+            <label for="downloadImageFormat" class="option-label">Image:</label>
+            <select id="downloadImageFormat">
+                <option value="jpg" selected>JPG</option>
+                <option value="webp">WebP</option>
+            </select>
+        </div>
+
+        <div class="option text">
+            <label for="downloadVideoFormat" class="option-label">Video:</label>
+            <select id="downloadVideoFormat">
+                <option value="mp4" selected>MP4</option>
+                <option value="webmVp9">WebM (VP9)</option>
+                <option value="webmVp8">WebM (VP8, older)</option>
+            </select>
         </div>
     </div>
 
