Add option to show GIF and video duration

--- a/options/options.html
+++ b/options/options.html
@@ -32,6 +32,11 @@
             <label for="isHideStandaloneVideos">Hide standalone videos</label>
         </div>
 
+        <div class="option">
+            <input type="checkbox" id="isShowVideoDuration" />
+            <label for="isShowVideoDuration">Show GIF and video duration</label>
+        </div>
+
 
         <h3 class='title'>Posts</h3>
     
@@ -93,7 +98,7 @@
 
         <div class="option">
             <input type="checkbox" id="isChangeFileName"/>
-            <label for="isChangeFileName">Include date and post type in filename</label>
+            <label for="isChangeFileName">Change filename to include date and post type</label>
         </div>
     </div>
 
