--- a/options/options.html
+++ b/options/options.html
@@ -9,16 +9,30 @@
 
 <body>
     <div id="options">
-        <h3 class='title'>More Personalization</h3>
+        <h3 class='title'>GIFs and Videos</h3>
+
+        <h4>Add duration to the title of</h4>
 
         <div class="option">
             <input type="checkbox" id="isShowGIFDuration" />
-            <label for="isShowGIFDuration">Show GIF duration</label>
+            <label for="isShowGIFDuration">GIFs</label>
         </div>
 
         <div class="option">
             <input type="checkbox" id="isShowVideoDuration" />
-            <label for="isShowVideoDuration">Show video duration</label>
+            <label for="isShowVideoDuration">Videos</label>
+        </div>
+
+        <h4>Prevent autoplay of</h4>
+
+        <div class="option">
+            <input type="checkbox" id="isPreventGIFAutoplay" />
+            <label for="isPreventGIFAutoplay">GIFs</label>
+        </div>
+
+        <div class="option">
+            <input type="checkbox" id="isPreventVideoAutoplay" />
+            <label for="isPreventVideoAutoplay">Videos</label>
         </div>
 
         <h3 class='title'>Feedback</h3>
