Change duration and autoplay options style
Also had some refactorings and added new comments.

--- a/options/options.html
+++ b/options/options.html
@@ -11,28 +11,30 @@
     <div id="options">
         <h3 class='title'>GIFs and Videos</h3>
 
-        <h4>Add duration to the title of</h4>
-
-        <div class="option">
-            <input type="checkbox" id="isShowGIFDuration" />
-            <label for="isShowGIFDuration">GIFs</label>
+        <div class="option text">
+            Add duration to the title of
+            <span class="inline">
+                <input type="checkbox" id="isShowGIFDuration" />
+                <label for="isShowGIFDuration">GIFs</label>
+            </span>
+            /
+            <span class="inline">
+                <input type="checkbox" id="isShowVideoDuration" />
+                <label for="isShowVideoDuration">Videos</label>
+            </span>
         </div>
 
-        <div class="option">
-            <input type="checkbox" id="isShowVideoDuration" />
-            <label for="isShowVideoDuration">Videos</label>
-        </div>
-
-        <h4>Prevent autoplay of</h4>
-
-        <div class="option">
-            <input type="checkbox" id="isPreventGIFAutoplay" />
-            <label for="isPreventGIFAutoplay">GIFs</label>
-        </div>
-
-        <div class="option">
-            <input type="checkbox" id="isPreventVideoAutoplay" />
-            <label for="isPreventVideoAutoplay">Videos</label>
+        <div class="option text">
+            Prevent autoplay of
+            <span class="inline">
+                <input type="checkbox" id="isPreventGIFAutoplay" />
+                <label for="isPreventGIFAutoplay">GIFs</label>
+            </span>
+            /
+            <span class="inline">
+                <input type="checkbox" id="isPreventVideoAutoplay" />
+                <label for="isPreventVideoAutoplay">Videos</label>
+            </span>
         </div>
 
         <h3 class='title'>Feedback</h3>
