--- a/options/options_popup.html
+++ b/options/options_popup.html
@@ -10,7 +10,7 @@
     <div id="options">
         <h3 class='title'>Personalization</h3>
 
-        <div class="option text">
+        <div class="option select">
             <label for="theme" class="option-label">Theme:</label>
             <select name="theme" id="theme">
                 <option value="default">Default</option>
@@ -73,7 +73,7 @@
 
         <h3 class="title">Downloads</h3>
 
-        <div class="option text">
+        <div class="option select">
             <label for="downloadImageFormat" class="option-label">Image format:</label>
             <select id="downloadImageFormat">
                 <option value="jpg" selected>JPG</option>
@@ -81,7 +81,7 @@
             </select>
         </div>
 
-        <div class="option text">
+        <div class="option select">
             <label for="downloadVideoFormat" class="option-label">GIF/Video format:</label>
             <select id="downloadVideoFormat">
                 <option value="mp4" selected>MP4</option>
