Add option to download full-resolution image

--- a/options/options.html
+++ b/options/options.html
@@ -41,15 +41,12 @@
 
         <p>
             If you have problems with the extension, or want to provide feedback, don't hesitate to
-            contact me at <a href="geiszla@gmail.com">geiszla@gmail.com</a>, or leave a review in
+            contact me at <a href="mailto:geiszla@gmail.com">geiszla@gmail.com</a>, or leave a review in
             the
             <a
                 href="https://chrome.google.com/webstore/detail/9gag-lite/namifldkgnlkiocmnhhpbppcoimcpobm"
                 target="_blank"
-            >
-                Chrome Web Store
-            </a>
-            .
+            >Chrome Web Store</a>.
         </p>
         <p id="version"></p>
     </div>
