--- a/options/options_popup.html
+++ b/options/options_popup.html
@@ -20,11 +20,9 @@
 
         <div class="option">
             <input type="checkbox" id="isHideAds" />
-            <label for="isHideAds">
-                Hide ads and
-                <input type="checkbox" id="isSimplifyLayout" class="option inline" />
-                <label for="isSimplifyLayout">simplify layout</label>
-            </label>
+            <label for="isHideAds">Hide ads and</label>
+            <input type="checkbox" id="isSimplifyLayout" class="inline-input" />
+            <label for="isSimplifyLayout">simplify layout</label>
         </div>
 
         <div class="option">
@@ -88,6 +86,11 @@
                 <option value="webmVp9">WebM (VP9)</option>
                 <option value="webmVp8">WebM (VP8, older)</option>
             </select>
+        </div>
+
+        <div class="option">
+            <input type="checkbox" id="isDownloadBigImage"/>
+            <label for="isDownloadBigImage">Download full-resolution image</label>
         </div>
 
         <div class="option">
